style/module/custom-type-map.css
/**
 * 列表转导图
 * REF [royc01/notion-theme](https://github.com/royc01/notion-theme/blob/c5e535a8f40a97c1d42384a7715ced88261dd59f/theme.css#L1444-L1577)
 */
@import url(/appearance/themes/Dark+/style/module/config.css);
@import url(/widgets/custom.css);
.protyle-content [custom-type~="思维导图"] [data-node-id].li,
.protyle-content [custom-type~="导图"] [data-node-id].li,
.protyle-content [custom-type~="脑图"] [data-node-id].li,
.protyle-content [custom-type~=mind-map] [data-node-id].li,
.protyle-content [custom-type~=map] [data-node-id].li {
  /* 列表项文字设置居中 */
  display: flex;
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type::after,
.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type::after,
.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type::after,
.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type::after,
.protyle-content [custom-type~=map] [data-node-id].li:first-of-type::after,
.protyle-content [custom-type~="思维导图"] [data-node-id].li:nth-last-of-type(2)::before,
.protyle-content [custom-type~="导图"] [data-node-id].li:nth-last-of-type(2)::before,
.protyle-content [custom-type~="脑图"] [data-node-id].li:nth-last-of-type(2)::before,
.protyle-content [custom-type~=mind-map] [data-node-id].li:nth-last-of-type(2)::before,
.protyle-content [custom-type~=map] [data-node-id].li:nth-last-of-type(2)::before {
  /* 取消多余线条 */
  border: none;
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type:nth-last-of-type(2),
.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type:nth-last-of-type(2),
.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type:nth-last-of-type(2),
.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type:nth-last-of-type(2),
.protyle-content [custom-type~=map] [data-node-id].li:first-of-type:nth-last-of-type(2) {
  /* 单子项居中 */
  top: 50%;
  transform: translate(0, -50%);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
.protyle-content [custom-type~=map] [data-node-id].li:first-of-type:nth-last-of-type(2)::after {
  /* 单个子项直线 */
  border-radius: 0;
  height: calc(50% - var(--custom-list-guides-line-width) / 8);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type::before,
.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type::before,
.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type::before,
.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type::before,
.protyle-content [custom-type~=map] [data-node-id].li:first-of-type::before {
  /* 上框线 */
  border-top-left-radius: var(--custom-border-radius);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li:nth-last-of-type(2)::after,
.protyle-content [custom-type~="导图"] [data-node-id].li:nth-last-of-type(2)::after,
.protyle-content [custom-type~="脑图"] [data-node-id].li:nth-last-of-type(2)::after,
.protyle-content [custom-type~=mind-map] [data-node-id].li:nth-last-of-type(2)::after,
.protyle-content [custom-type~=map] [data-node-id].li:nth-last-of-type(2)::after {
  /* 下框线 */
  border-bottom: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
  border-bottom-left-radius: var(--custom-border-radius);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li::before,
.protyle-content [custom-type~="导图"] [data-node-id].li::before,
.protyle-content [custom-type~="脑图"] [data-node-id].li::before,
.protyle-content [custom-type~=mind-map] [data-node-id].li::before,
.protyle-content [custom-type~=map] [data-node-id].li::before {
  /* 上导航线 */
  content: "";
  position: absolute;
  height: calc(50% - var(--custom-list-guides-line-width) / 2);
  border-left: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
  width: 2em;
  top: 50%;
  border-top: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li::after,
.protyle-content [custom-type~="导图"] [data-node-id].li::after,
.protyle-content [custom-type~="脑图"] [data-node-id].li::after,
.protyle-content [custom-type~=mind-map] [data-node-id].li::after,
.protyle-content [custom-type~=map] [data-node-id].li::after {
  /* 下导航线 */
  content: "";
  position: absolute;
  height: calc(50% - var(--custom-list-guides-line-width) / 2);
  border-left: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
  width: 2em;
  border-bottom: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li[data-subtype="u"] > div.protyle-action,
.protyle-content [custom-type~="导图"] [data-node-id].li[data-subtype="u"] > div.protyle-action,
.protyle-content [custom-type~="脑图"] [data-node-id].li[data-subtype="u"] > div.protyle-action,
.protyle-content [custom-type~=mind-map] [data-node-id].li[data-subtype="u"] > div.protyle-action,
.protyle-content [custom-type~=map] [data-node-id].li[data-subtype="u"] > div.protyle-action {
  /* 无序列表标志 */
  top: calc(50%);
  left: calc(2em - 16px);
}
.protyle-content [custom-type~="思维导图"] [data-node-id].li > div:nth-child(2),
.protyle-content [custom-type~="导图"] [data-node-id].li > div:nth-child(2),
.protyle-content [custom-type~="脑图"] [data-node-id].li > div:nth-child(2),
.protyle-content [custom-type~=mind-map] [data-node-id].li > div:nth-child(2),
.protyle-content [custom-type~=map] [data-node-id].li > div:nth-child(2) {
  /* 修复单子项导航线错位问题 */
  margin-top: 4px !important;
}
/* ... */

